improve code with sonarqube hints